im a fcking god
i need sleep

--- a/public/AnnouncementSundayService.html
+++ b/public/AnnouncementSundayService.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="AnnounceTrial.css">
     <link rel="stylesheet" href="AnnouncementNavBar.css">
-    <script src="./Archive.js" defer></script>
+    
     <script src="./AnnouncementSundayService.js" type="module" defer></script>
     <title>Announcement</title>
     
@@ -158,9 +158,24 @@
 
 
   </div>
-
-  
-
-
 </body>
+<script>
+  const body = document.querySelector("body");
+const navbar = document.querySelector(".navbar");
+const menuBtn = document.querySelector(".menu-btn");
+const cancelBtn = document.querySelector(".cancel-btn");
+menuBtn.onclick = ()=>{
+  navbar.classList.add("show");
+  menuBtn.classList.add("hide");
+  body.classList.add("disabled");
+}
+cancelBtn.onclick = ()=>{
+  body.classList.remove("disabled");
+  navbar.classList.remove("show");
+  menuBtn.classList.remove("hide");
+}
+window.onscroll = ()=>{
+  this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
+}
+</script>
 </html>
