--- a/public/Sundayservice.html
+++ b/public/Sundayservice.html
@@ -60,59 +60,19 @@
 
   <div class="sermons">
 
-    <div class="live">
-      <h1>Live Sermons</h1>
-      <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fgreatlightworldharvest%2Fvideos%2F746509673730823%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+    <div class="live" id="livediv">
+      <h1 id="livesermons">Live Sermons</h1>
+      <iframe id="firstLive" src="" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
     </div>
 
     <div class="pastLive">
-      <h1>Past Sermons</h1>
-      <div class="scroll">
+        <h1>Past Sermons</h1>
+      <div class="scroll" id="programContainer">
 
-        <div class="img1">
-          <a href="Archive1.html">
-          <div class="innerimg1">
-            <h2>Tithes and Offering</h2>
-            <p>March 5, 2023</p>
-          </div>
-          <a href="Archive1.html">
-        </div>
+        <!--
+            stuff will appear here
 
-        <div class="img1">
-          <a href="Archive2.html">
-          <div class="innerimg1">
-            <h2>Salvation</h2>
-            <p>February 26, 2023</p>
-          </div>
-          </a>
-        </div>
-
-        <div class="img1">
-          <a href="Archive3.html">
-          <div class="innerimg1">
-            <h2>Sinners</h2>
-            <p>February 19, 2023</p>
-          </div>
-          </a>
-        </div>
-
-        <div class="img1">
-          <a href="Archive4.html">
-          <div class="innerimg1">
-            <h2>Miracles in life</h2>
-            <p>February 12, 2023</p>
-          </div>
-          </a>
-        </div>
-
-        <div class="img1">
-          <a href="Archive4.html"></a>
-          <div class="innerimg1">
-            <h2>Guard your Heart</h2>
-            <p>February 5, 2023</p>
-          </div>
-          </a>
-        </div>
+        -->
       </div>
     </div>
 
@@ -159,13 +119,16 @@
 
 <section id="subscribe">
 
-  <div class="subs">
+  <!--
+    it should appear here.
+  -->
+  <!-- <div class="subs">
     <img src="SundaySchooltings/Subs.jpg" alt="">
     <div class="sText">
       <h1>Be Notified</h1>
       <p>We are thrilled to invite you to subscribe to our church website in order to stay informed of all upcoming events, announcements, and notifications. Our website is the go-to source for all things related to our church, and we want to make sure that you never miss out on any important information.</p>
       <a href="Form.html"><button><span><h1>Click me </h1></span></button></a>
-  </div>
+  </div> -->
 
 </section>
 
