--- a/public/Archive1.html
+++ b/public/Archive1.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Archive1.css">
-    <title>Tithes and Offering</title>
-    <script src="Archive.js" defer></script>
+    <title id="windowTitle"></title>
+    <script src="./Archive.js" type="module" defer></script>
 
 </head>
     <body>
@@ -38,23 +38,16 @@
       
 
 <div class="banner">
-    <h1>Tithes and Offering</h1>
-    <p>Speaker: Rev. Alexander V. Isaguirre</p>
+    <h1 id="titleBanner"></h1>
+    <!-- <p>Speaker: Rev. Alexander V. Isaguirre</p> -->
 </div>
 
 <div class="videoPanel">
-    <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fgreatlightworldharvest%2Fvideos%2F746509673730823%2F&show_text=false&width=560&t=0" width="560" height="380" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+    <iframe id="videoID" src="" width="560" height="380" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
 </div>
 
-<div class="content1">
-    <p>Good day, brothers and sisters in Christ. Today, I want to talk to you about the importance of tithes and offerings, and the blessings that come from giving generously to God.</p>
-    <p>First, let's define what tithes and offerings are. Tithing is the practice of giving a tenth of our income to the church, while offerings are additional gifts we give to support the work of God's kingdom</p>
-    <p>Many Christians struggle with the idea of giving a tithe. They may think, "I need this money for my bills and other expenses," or "I don't trust how the church will use my donation." But the truth is that tithing is not just about money, it's about trust and obedience.</p>
-    <p>God calls us to give back to Him, not just as an obligation, but as an act of worship and gratitude for all that He has given us. When we give, we demonstrate our faith in God's provision and our willingness to follow His commands.</p>
-    <p>Moreover, giving is a way to participate in God's work of transforming lives and communities. By giving to the church, we support the preaching of the gospel, the care of the needy, and the building of God's kingdom on earth.</p>
-    <p>In Malachi 3:10, God says, <span> "Bring the whole tithe into the storehouse, that there may be food in my house. Test me in this," says the Lord Almighty, "and see if I will not throw open the floodgates of heaven and pour out so much blessing that there will not be room enough to store it."</span></p>
-    <p>When we give generously and cheerfully, God promises to bless us in return. This does not necessarily mean that we will become rich or have no financial struggles, but it does mean that we will experience God's grace and provision in our lives. We will have peace, joy, and contentment in knowing that we are part of something greater than ourselves.</p>
-    <p>So, I encourage you to prayerfully consider your giving to the church. Ask God to show you how much to give and how to give. And remember, giving is not a burden or a duty, but a privilege and a joy. Let us give with open hearts, trusting in God's love and faithfulness.</p>
+<div class="content1" >
+    <p id="blogBody"></p>
 </div>
 
 <div class="bottomLinks">
@@ -159,6 +152,24 @@
 
 
   </div>
-    
     </body>
+    <script>
+      const body = document.querySelector("body");
+    const navbar = document.querySelector(".navbar");
+    const menuBtn = document.querySelector(".menu-btn");
+    const cancelBtn = document.querySelector(".cancel-btn");
+    menuBtn.onclick = ()=>{
+      navbar.classList.add("show");
+      menuBtn.classList.add("hide");
+      body.classList.add("disabled");
+    }
+    cancelBtn.onclick = ()=>{
+      body.classList.remove("disabled");
+      navbar.classList.remove("show");
+      menuBtn.classList.remove("hide");
+    }
+    window.onscroll = ()=>{
+      this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
+    }
+    </script>
 </html>
