--- a/public/J12Kids.html
+++ b/public/J12Kids.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="j12.css">
-    <script defer src="j12kids.js" type="module"></script>
+    <script  src="./J12kids.js" type="module"></script>
     <title>J12 Kids</title>
 </head>
 <body>
@@ -226,64 +226,36 @@
         <div class="blogs">
             <div class="column">
               <h1>Latest Stories</h1>
-                <div class="blog">
-                    <a href="Story1.html">
-                    <div class="blogInfo">
-                        <h1>Why Jesus loves Children?</h1>
-                        <p>Story</p>
-                    </div>
-                    </a>
+                <div class="blog" id="j12kids-first">
+                   <!--
+                    first story appears here
+                   -->
                 </div>
             </div>
             <div class="column2">
                 <h1>Past Stories</h1>
-                <div class="scroll">
-                  <div class="blog">
-                    <a href="Story2.html">
-                    <div class="blogInfo">
-                        <h1>Story of David and Goliath</h1>
-                        <p>Greatest Upset of them all</p>
-                    </div>
-                    </a>
-                  </div>
-                  <div class="blog2">
-                    <a href="Story3.html">
-                    <div class="blogInfo">
-                        <h1>Daniel and the Lion</h1>
-                        <p>Story</p>
-                    </div>
-                    </a>
-                  </div>
-                  <div class="blog3">
-                    <a href="Story4.html">
-                    <div class="blogInfo">
-                        <h1>Story of Creation</h1>
-                        <p>Story</p>
-                    </div>
-                    </a>
-                  </div>
-                  <div class="blog4">
-                    <a href="Story5.html">
-                    <div class="blogInfo">
-                        <h1>Jesus feeds 5000 Men</h1>
-                        <p>Story</p>
-                    </div>
-                    </a>
-                  </div>
+                <div class="scroll" id="programContainer">
+                  <!--
+                    Stories will appear here
+                  -->
+                    <!-- <div class="blog">
+                        <a href="Story2.html">
+                          <div class="blogInfo">
+                              <h1>Story of David and Goliath</h1>
+                              <p>Greatest Upset of them all</p>
+                          </div>
+                        </a>
+                    </div> -->
                 </div>
           </div>
         </div>
 </section>
-
-    <div class="subs">
-        <img src="SundaySchooltings/Subs.jpg" alt="">
-        <div class="sText">
-          <h1>Be Notified</h1>
-          <p>We are thrilled to invite you to subscribe to our church website in order to stay informed of all upcoming events, announcements, and notifications. Our website is the go-to source for all things related to our church, and we want to make sure that you never miss out on any important information.</p>
-          <a href="Form.html"><button><span><h1>Click me </h1></span></button></a>
-      </div>
-    </div>
-
+<section id="subscribe">
+  <!--
+    it should appear here
+  -->
+   
+</section>
     <div class="bottomLinks">
 
         <div class="firstGrid">
