--- a/public/Story1.html
+++ b/public/Story1.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="story.css">
     <link rel="stylesheet" href="StoriesNavBar.css">
-    <script src="j12kids.js" defer></script>
+    <script src="./Story1.js" type="module" defer></script>
     <script src="Navbar.js" defer></script>
 
-    <title>Why Jesus Loves Children?</title>
+    <title id="bannertitle"></title>
 </head>
     <body>
 
@@ -39,16 +39,13 @@
       </section>
 
 <div class="banner">
-    <h1>Why Jesus Loves Children?</h1>
-    <p>Matthew 18:1-5 / Mark 10:13-16</p>
+    <h1 id="storyTitle"></h1>
+    <p id="subtitle"></p>
 </div>
 
 <div class="container">
-    <p>In the Bible, there are several instances where Jesus shows his love for children. One such story can be found in the Gospel of Mark, chapter 10, verses 13 to 16.</p>
-    <p>One day, some people brought their young children to Jesus so that he could touch and bless them, but the disciples rebuked them and told them to go away. However, when Jesus saw this, he was indignant and said to his disciples, "Let the little children come to me, and do not hinder them, for the kingdom of God belongs to such as these. Truly I tell you, anyone who will not receive the kingdom of God like a little child will never enter it." And he took the children in his arms, placed his hands on them, and blessed them.</p>
-    <p>In the Gospel of Matthew, chapter 18, verses 1-5, we find the story of how Jesus taught his disciples to become like children in order to enter the kingdom of heaven. One day, the disciples came to Jesus and asked him, "Who is the greatest in the kingdom of heaven?" Jesus called a little child to him and placed the child among them. He said, "Truly I tell you, unless you change and become like little children, you will never enter the kingdom of heaven. Therefore, whoever takes the lowly position of this child is the greatest in the kingdom of heaven. And whoever welcomes one such child in my name welcomes me."</p>
-    <p>Jesus used this opportunity to teach his disciples that they needed to have the faith, trust, and innocence of a child to enter the kingdom of heaven. Children are humble, teachable, and trusting, and Jesus loved these qualities. He wanted his disciples to understand that in order to follow him and enter the kingdom of heaven, they needed to have the same qualities.</p>
-    <p>In summary, Jesus loves children because they have qualities that he values, such as faith, trust, and humility. He also recognizes the importance of children in the kingdom of heaven and wants them to be welcomed and blessed.</p>
+    <p id="storyBody"></p>
+    
 </div>
 
 <div class="bottomLinks">
@@ -154,4 +151,23 @@
 
   </div>
 </body>
+<script>
+  const body = document.querySelector("body");
+  const navbar = document.querySelector(".navbar");
+  const menuBtn = document.querySelector(".menu-btn");
+  const cancelBtn = document.querySelector(".cancel-btn");
+  menuBtn.onclick = ()=>{
+    navbar.classList.add("show");
+    menuBtn.classList.add("hide");
+    body.classList.add("disabled");
+  }
+  cancelBtn.onclick = ()=>{
+    body.classList.remove("disabled");
+    navbar.classList.remove("show");
+    menuBtn.classList.remove("hide");
+  }
+  window.onscroll = ()=>{
+    this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
+  }
+</script>
 </html>
