--- a/public/AnnouncementSundayService.html
+++ b/public/AnnouncementSundayService.html
@@ -25,7 +25,7 @@
                 <img src="HeadnFooter/closewindow.png" alt="">
             </div>
               <!-- <li><a href="Announcement.html">General</a></li> -->
-              <li id="navbarDiv"><a href="Announcement.html">General</a></li> 
+              <li id="navbarDiv"><a href="Announcement.html?Prompt=announcement">General</a></li> 
               <!-- <li><a href="AnnouncementWildfire.html">Wildfire</a></li>
               <li><a href="AnnouncementJ12Kids.html">J12 Kids</a></li>
               <li><a href="AnnouncementSpearhead.html">Spearhead</a></li>
