--- a/public/Media.html
+++ b/public/Media.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Media.css">
+    <script defer type="module" src="./Media.js"></script>
     <title>Media</title>
 </head>
 
@@ -21,54 +22,13 @@
     </div>
 
     <div class="gallery">
-        <div class="text">
+        <div class="text" id="programContainer">
             <h1>Gallery</h1>
         </div>
-        <div class="row1">
-
-            <div class="news">
-                <a href="galleryOne.html">
-                <div class="newsInfo">
-                  <h1>Just the Two of us</h1>
-                  <p>February 2019</p>
-                </div>
-                </a>
-              </div>
-
-              <div class="news1">
-                <a href="galleryFour.html">
-                <div class="newsInfo">
-                  <h1>Life Class Encounter</h1>
-                  <p>August 2018</p>
-                </div>
-                </a>
-              </div>
-
-        </div>
-        <div class="row2">
-
-
-            <div class="news">
-              <a href="galleryThree.html">
-              <div class="newsInfo">
-                <h1>Youth Leadership Camp</h1>
-                <p>July 2018</p>
-              </div>
-              </a>
-            </div>
-
-            <div class="news1">
-              <a href="galleryFour.html">
-              <div class="newsInfo">
-                <h1>Encounter Retreat</h1>
-                <p>November 2017</p>
-              </div>
-              </a>
-            </div>
-
-            
-
-      </div>
+        <!--
+          will apper here
+        -->
+       
     </div>
 
 
