--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@
         <div class="mediaDesc">
           <h1>Moments and Memories</h1>
           <p>Welcome to our photo gallery! Here you will find a collection of images that showcase the life and work of our church community. From worship services and baptisms to outreach events and mission trips, we have captured some of the most memorable moments of our journey together.</p>
-          <a href="Media.html"><button class="button"><span><h1>Click me </h1></span></button></a>
+          <a href="Media.html?Prompt=media"><button class="button"><span><h1>Click me </h1></span></button></a>
         </div>
       </div>
     
@@ -256,7 +256,7 @@
         <div class="announcement">
           <h1>Announcement</h1>
           <p>Here you will find information about upcoming events, activities, and other news from our church community. We update this page regularly, so be sure to check back often for the latest updates.</p>
-          <a href="Announcement.html"><button class="button"><span><h1>Be updated </h1></span></button></a>
+          <a href="Announcement.html?Prompt=announcement"><button class="button"><span><h1>Be updated </h1></span></button></a>
         </div>
     
       </div>
