--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
 <link rel="stylesheet" href="./Index.css">
 <script src="./Index.js" type="module" ></script>
-<title> Index </title>
+<title> JGLWHM </title>
 
     <body>
     
