--- a/public/Archive1.html
+++ b/public/Archive1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Archive1.css">
     <title id="windowTitle"></title>
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script src="./Archive.js" type="module" defer></script>
 
 </head>
