--- a/public/EquipForm.html
+++ b/public/EquipForm.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="EquipForm.css">
     <link rel="stylesheet" href="MentoringNavbar.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script src="./EquipformJS.js" type="module"></script>
     <title>Mentoring Form</title>
 </head>
