--- a/public/Form.html
+++ b/public/Form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Form.css">
     <link rel="stylesheet" href="FormNavbar.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script defer src="./Form.js" type="module"></script>
     <title>Subscription Form</title>
 </head>
