--- a/public/J12Kids.html
+++ b/public/J12Kids.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="j12.css">
-    <script  src="./J12kids.js" type="module"></script>
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
+    <script  src="./j12kids.js" type="module"></script>
     <title>J12 Kids</title>
 </head>
 <body>
