--- a/public/LifeClass.html
+++ b/public/LifeClass.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Lifeclass.css">
     <link rel="stylesheet" href="LifeClassNavBar.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script defer src="equipping.js"></script>
+    
     <title>LifeClass</title>
 </head>
 <body>
