--- a/public/MLblog1.html
+++ b/public/MLblog1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Mlblog.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <link rel="stylesheet" href="MLNavbar.css">
     <script src="./MLblog1.js" type="module" defer></script>
     <title id="bannertitle"></title>
