--- a/public/PrayerRequest.html
+++ b/public/PrayerRequest.html
@@ -5,6 +5,7 @@
     <title>Prayer Request Form</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link rel="stylesheet" href="PrayerRequest.css" >
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script src="./PrayerRequest.js" type="module" defer></script>
   </head>
   <body>
