--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
 <link rel="stylesheet" href="./Index.css">
+<link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
 <script src="./Index.js" type="module" ></script>
 <title> JGLWHM </title>
 
@@ -51,6 +52,9 @@
       </div>
       <div class="mySlides fade">
         <img src="HeadnFooter/img3.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="HeadnFooter/banner.jpg" style="width:100%">
       </div>
 
       <div style="text-align:center; margin:-5vh;">
