--- a/public/AnnouncementSundayService.html
+++ b/public/AnnouncementSundayService.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="AnnounceTrial.css">
     <link rel="stylesheet" href="AnnouncementNavBar.css">
-    
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script src="./AnnouncementSundayService.js" type="module" defer></script>
     <title>Announcement</title>
     
