--- a/public/Blog1.html
+++ b/public/Blog1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Blog1.css">
     <link rel="stylesheet" href="BlogNavBar.css"> 
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script src="./Blog1.js" type="module" defer></script>
     <title id="bannertitle"></title>
 </head>
