--- a/public/Mentoring.html
+++ b/public/Mentoring.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Mentoring.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <link rel="stylesheet" href="MentoringNavbar.css">
     <script defer src="equipping.js"></script>
     <title>Mentoring</title>
