--- a/public/Spearhead.html
+++ b/public/Spearhead.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Spearhead.css">
-    <script defer src="./Spearhead.js" type="module"></script>
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
+    <script defer src="./spearhead.js" type="module"></script>
     <title>Spearhead</title>
 </head>
 <body>
