--- a/public/Story1.html
+++ b/public/Story1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="story.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <link rel="stylesheet" href="StoriesNavBar.css">
     <script src="./Story1.js" type="module" defer></script>
     <script src="Navbar.js" defer></script>
