--- a/public/fireBlogs1.html
+++ b/public/fireBlogs1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./fireblogs.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <!-- <script src="./fireblogs.js" defer></script> -->
     <title id="thisTitle"></title>
 </head>
