--- a/public/galleryFour.html
+++ b/public/galleryFour.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gallery1.css">
     <link rel="stylesheet" href="lightbox.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <title>Encounter Retreat</title>
 </head>
 
