--- a/public/galleryTwo.html
+++ b/public/galleryTwo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gallery1.css">
+    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <link rel="stylesheet" href="lightbox.css">
     <title>Encounter Retreat</title>
 </head>
