--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
           <span class="dot"></span>
           <span class="dot"></span>
           <span class="dot"></span>
+          <span class="dot"></span>
   
       </div>
       <a class="prev" onclick="prevSlide()">&#10094;</a>
