--- a/public/SOL.html
+++ b/public/SOL.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <link rel="stylesheet" href="SOLNavBar.css">
     <script defer src="equipping.js"></script>
+    <script type="module" src="./solclass.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
     </style>
@@ -83,103 +84,9 @@
 
 <div class="bottomLinks">
 
-    <div class="firstGrid">
-      <img src="HeadnFooter/logo.png" alt="">
-      <h1><a href="">JGLWHM</a></h1>
-      <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
-    </div>
-
-    
-    <div class="secondGrid">
-        <p>Connects</p>
-        <div class="botli">
-          <p><a href="Sundayservice.html">Sunday School</a></p>
-          <p><a href="Wildfire.html">Wildfire</a></p>
-          <p><a href="J12Kids.html">J12 Kids</a></p>
-          <p><a href="Spearhead.html">Spearhead</a></p>
-          <p><a href="Married4Life.html">Married for Life</a></p>
-        </div>
-    </div>
-
-    <div class="thirdGrid">
-      <p>Equipping</p>
-      <div class="botli">
-        <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL.html">SOL Class</a></p>
-        <p><a href="LifeClass.html">LifeClass</a></p>
-      </div>
-    </div>
-
-    <div class="thirdGrid">
-      <p>Others</p>
-      <div class="botli">
-        <p><a href="Media.html">Media</a></p>
-        <p><a href="PrayerRequest.html">Prayer Request</a></p>
-        <p><a href="Announcement.html">Announcement</a></p>
-      </div>
-    </div>
-
-    <div class="thirdGrid">
-      <p>Socials</p>
-      <div class="botli">
-        <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
-        <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
-      </div>
-    </div>
-   
-
-  </div>
-
-  <div class="mobileLinks">
-    
-    <div class="first">
-      <div class="firstGrid">
-        <img src="HeadnFooter/logo.png" alt="">
-        <h1><a href="index.html">JGLWHM</a></h1>
-        <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
-      </div>
-    </div>
-
-    <div class="second">
-
-      <div class="secondLane">
-        <p class="noice">Connects</p>
-        <div class="links">
-          <p><a href="Sundayservice.html">Sunday School</a></p>
-          <p><a href="Wildfire.html">Wildfire</a></p>
-          <p><a href="J12Kids.html">J12 Kids</a></p>
-          <p><a href="Spearhead.html">Spearhead</a></p>
-          <p><a href="Married4Life.html">Married for Life</a></p>
-        </div>
-      </div>
-
-      <div class="secondLane">
-        <p class="noice">Equipping</p>
-        <div class="links">
-          <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL.html">SOL Class</a></p>
-          <p><a href="LifeClass.html">LifeClass</a></p>
-        </div>
-      </div>
-
-      <div class="secondLane">
-        <p class="noice">Others</p>
-        <div class="links">
-          <p><a href="Media.html">Media</a></p>
-          <p><a href="PrayerRequest.html">Prayer Request</a></p>
-          <p><a href="Announcement.html">Announcements</a></p>
-        </div>
-      </div>
-
-      <div class="secondLane">
-        <p class="noice">Socials</p>
-        <div class="links">
-          <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
-          <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
-        </div>
-      </div>
-
-    </div>
+   <!--
+  footer will appear here
+-->
   </div>
 
 </body>
