--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JGLWHM</title>
     <link rel="stylesheet" href="Index.css">
+    <link rel="stylesheet" href="Navbar.css">
     <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="./Index.js" type="module" ></script>
@@ -15,32 +16,32 @@
   <body>
 
     <header>
-      <a href="#" class="logo">JGLWHM</a>
+      <a href="index.html" class="logo">JGLWHM</a>
       <div class="navigation">
         <ul class="menu">
           <div class="close-btn"></div>
-          <li class="menu-item"><a href="#">Home</a></li>
+          <li class="menu-item"><a href="index.html">Home</a></li>
           <li class="menu-item">
-            <a class="sub-btn" href="#">Connects <i class="fas fa-angle-down"></i></a>
+            <a class="sub-btn" href="index.html#connects">Connects +</a>
             <ul class="sub-menu">
-              <li class="sub-item"><a href="#">Sunday Service</a></li>
-              <li class="sub-item"><a href="#">Wildfire</a></li>
-              <li class="sub-item"><a href="#">J12 Kids</a></li>
-              <li class="sub-item"><a href="#">Spearhead</a></li>
-              <li class="sub-item"><a href="#">Married For Life</a></li>
+              <li class="sub-item"><a href="Sundayservice.html">Sunday Service</a></li>
+              <li class="sub-item"><a href="Wildfire.html">Wildfire</a></li>
+              <li class="sub-item"><a href="J12Kids.html">J12 Kids</a></li>
+              <li class="sub-item"><a href="Spearhead.html">Spearhead</a></li>
+              <li class="sub-item"><a href="Married4Life.html">Married For Life</a></li>
             </ul>
           </li>
           <li class="menu-item">
-            <a class="sub-btn" href="#">Equipping <i class="fas fa-angle-down"></i></a>
+            <a class="sub-btn" href="index.html#equipping">Equipping +</a>
             <ul class="sub-menu">
-              <li class="sub-item"><a href="#">Mentoring</a></li>
-              <li class="sub-item"><a href="#">SOL CLass</a></li>
-              <li class="sub-item"><a href="#">Lifeclass</a></li>
+              <li class="sub-item"><a href="Mentoring.html">Mentoring</a></li>
+              <li class="sub-item"><a href="SOL.html">SOL CLass</a></li>
+              <li class="sub-item"><a href="LifeClass.html">Lifeclass</a></li>
             </ul>
           </li>
-          <li class="menu-item"><a href="#">Media</a></li>
-          <li class="menu-item"><a href="#">Prayer Request</a></li>
-          <li class="menu-item"><a href="#">Announcements</a></li>
+          <li class="menu-item"><a href="Media.html">Media</a></li>
+          <li class="menu-item"><a href="index.html#prayerRequest">Prayer Request</a></li>
+          <li class="menu-item"><a href="Announcement.html">Announcements</a></li>
         </ul>
       </div>
       <div class="menu-btn"></div>
