--- a/public/Archive1.html
+++ b/public/Archive1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Archive1.css">
+    <link rel="stylesheet" href="NavbarSundayService.css">
     <title id="windowTitle"></title>
     <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script src="./Archive.js" type="module" defer></script>
@@ -12,30 +13,38 @@
 </head>
     <body>
 
-      <section id="home">
-        <nav class="navbar">
-          <div class="content">
-            <div class="logo">
-              <a href="index.html#connects">
-              <img src="HeadnFooter/logo.png" alt="">
-              </a>
-          </div>
-            <ul class="menu-list">
-              <div class="icon cancel-btn">
-                <img src="HeadnFooter/closewindow.png" alt="">
-              </div>
-              <li><a href="Sundayservice.html">Home</a></li>
-              <li><a href="Sundayservice.html#aboutus">About Us</a></li>
-              <li><a href="Sundayservice.html#sermons">Sermons</a></li>
-              <li><a href="Sundayservice.html#subscribe">Subscribe</a></li>
-              <li><a href="Announcement.html">Announcements</a></li>
-            </ul>
-            <div class="icon menu-btn">
-              <img src="HeadnFooter/menu.png" alt="">
-            </div>
-          </div>
-        </nav>
-      </section>
+      <header>
+        <a href="index.html" class="logo">JGLWHM</a>
+        <div class="navigation">
+          <ul class="menu">
+            <div class="close-btn"></div>
+            <li class="menu-item"><a href="index.html">Home</a></li>
+            <li class="menu-item">
+              <a class="sub-btn" href="#">Connects +</a>
+              <ul class="sub-menu">
+                <li class="sub-item"><a href="Sundayservice.html">Sunday Service</a></li>
+                <li class="sub-item"><a href="Wildfire.html">Wildfire</a></li>
+                <li class="sub-item"><a href="J12Kids.html">J12 Kids</a></li>
+                <li class="sub-item"><a href="Spearhead.html">Spearhead</a></li>
+                <li class="sub-item"><a href="Married4Life.html">Married For Life</a></li>
+              </ul>
+            </li>
+            <li class="menu-item">
+              <a class="sub-btn" href="#">Equipping +</a>
+              <ul class="sub-menu">
+                <li class="sub-item"><a href="Mentoring.html">Mentoring</a></li>
+                <li class="sub-item"><a href="SOL.html">SOL CLass</a></li>
+                <li class="sub-item"><a href="LifeClass.html">Lifeclass</a></li>
+              </ul>
+            </li>
+            <li class="menu-item"><a href="Media.html">Media</a></li>
+            <li class="menu-item"><a href="index.html#prayerRequest">Prayer Request</a></li>
+            <li class="menu-item"><a href="Announcement.html">Announcements</a></li>
+          </ul>
+        </div>
+        <div class="menu-btn"></div>
+      </header>
+    
       
 
 <div class="banner">
