--- a/public/Archive1.html
+++ b/public/Archive1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="NavbarSundayService.css">
     <title id="windowTitle"></title>
     <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" charset="utf-8"></script>
     <script src="./Archive.js" type="module" defer></script>
 
 </head>
@@ -69,22 +70,36 @@
   </div>
     </body>
     <script>
-      const body = document.querySelector("body");
-    const navbar = document.querySelector(".navbar");
-    const menuBtn = document.querySelector(".menu-btn");
-    const cancelBtn = document.querySelector(".cancel-btn");
-    menuBtn.onclick = ()=>{
-      navbar.classList.add("show");
-      menuBtn.classList.add("hide");
-      body.classList.add("disabled");
-    }
-    cancelBtn.onclick = ()=>{
-      body.classList.remove("disabled");
-      navbar.classList.remove("show");
-      menuBtn.classList.remove("hide");
-    }
-    window.onscroll = ()=>{
-      this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
-    }
+      //jquery for toggle dropdown menus
+$(document).ready(function(){
+  //toggle sub-menus
+  $(".sub-btn").click(function(){
+    $(this).next(".sub-menu").slideToggle();
+  });
+
+  //toggle more-menus
+  $(".more-btn").click(function(){
+    $(this).next(".more-menu").slideToggle();
+  });
+});
+
+//javascript for the responsive navigation menu
+var menu = document.querySelector(".menu");
+var menuBtn = document.querySelector(".menu-btn");
+var closeBtn = document.querySelector(".close-btn");
+
+menuBtn.addEventListener("click", () => {
+  menu.classList.add("active");
+});
+
+closeBtn.addEventListener("click", () => {
+  menu.classList.remove("active");
+});
+
+//javascript for the navigation bar effects on scroll
+window.addEventListener("scroll", function(){
+  var header = document.querySelector("header");
+  header.classList.toggle("sticky", window.scrollY > 0);
+});
     </script>
 </html>
