--- a/public/PrayerRequest.html
+++ b/public/PrayerRequest.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="PrayerRequest.css" >
     <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script src="./PrayerRequest.js" type="module" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" charset="utf-8"></script>
   </head>
   <body>
 
