--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,9 @@
     <div class="please">
         <div class="slideshow-container">
   
-            <div class="mySlides fade">
+            <!-- <div class="mySlides fade">
                 <a href="Sundayservice.html#sermons"><img src="HeadnFooter/img69.png" style="width:100%"></a>
-            </div>
+            </div> -->
             <div class="mySlides fade">
                 <img src="HeadnFooter/img.png" style="width:100%">
             </div>
