--- a/public/Announcement.html
+++ b/public/Announcement.html
@@ -8,39 +8,43 @@
     <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
     <script src="Archive.js" defer></script>
     <script defer src="./Announcement.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" charset="utf-8"></script>
     <title>Announcement</title>
     
 </head>
 <body>
     
-  <section id="home">
-    <nav class="navbar">
-      <div class="content">
-        <div class="logo">
-            <a href="index.html">
-            <img src="HeadnFooter/logo.png" alt="">
-            </a>
-        </div>
-        <ul class="menu-list">
-            <div class="icon cancel-btn" >
-                <img src="HeadnFooter/closewindow.png" alt="">
-            </div>
-               <li id="navbarDiv"><a href="Announcement.html">General</a></li>
-              <!-- <li><a href="AnnouncementSundayService.html">Sunday Service</a></li>
-              <li><a href="AnnouncementWildfire.html">Wildfire</a></li>
-              <li><a href="AnnouncementJ12Kids.html">J12 Kids</a></li>
-              <li><a href="AnnouncementSpearhead.html">Spearhead</a></li>
-              <li><a href="AnnouncementMarriedforLife.html">Married for Life</a></li>
-              <li><a href="AnnouncementMentoring.html">Mentoring</a></li>
-              <li><a href="AnnouncementSOLClass.html">SOL Class</a></li>
-              <li><a href="AnnouncementLifeClass.html">Life Class</a></li> --> 
-        </ul>
-        <div class="icon menu-btn">
-          <img src="HeadnFooter/menu.png" alt="">
-        </div>
-      </div>
-    </nav>
-  </section>
+  <header>
+    <a href="index.html" class="logo">JGLWHM</a>
+    <div class="navigation">
+      <ul class="menu">
+        <div class="close-btn"></div>
+        <li class="menu-item"><a href="index.html">Home</a></li>
+        <li class="menu-item">
+          <a class="sub-btn" href="#">Connects +</a>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="Sundayservice.html">Sunday Service</a></li>
+            <li class="sub-item"><a href="Wildfire.html">Wildfire</a></li>
+            <li class="sub-item"><a href="J12Kids.html">J12 Kids</a></li>
+            <li class="sub-item"><a href="Spearhead.html">Spearhead</a></li>
+            <li class="sub-item"><a href="Married4Life.html">Married For Life</a></li>
+          </ul>
+        </li>
+        <li class="menu-item">
+          <a class="sub-btn" href="#">Equipping +</a>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="Mentoring.html">Mentoring</a></li>
+            <li class="sub-item"><a href="SOL.html">SOL CLass</a></li>
+            <li class="sub-item"><a href="LifeClass.html">Lifeclass</a></li>
+          </ul>
+        </li>
+        <li class="menu-item"><a href="Media.html">Media</a></li>
+        <li class="menu-item"><a href="index.html#prayerRequest">Prayer Request</a></li>
+        <li class="menu-item"><a href="Announcement.html">Announcements</a></li>
+      </ul>
+    </div>
+    <div class="menu-btn"></div>
+  </header>
 
   <section>
 
@@ -70,22 +74,36 @@
   </div>
 </body>
 <script>
-  const body = document.querySelector("body");
-const navbar = document.querySelector(".navbar");
-const menuBtn = document.querySelector(".menu-btn");
-const cancelBtn = document.querySelector(".cancel-btn");
-menuBtn.onclick = ()=>{
-  navbar.classList.add("show");
-  menuBtn.classList.add("hide");
-  body.classList.add("disabled");
-}
-cancelBtn.onclick = ()=>{
-  body.classList.remove("disabled");
-  navbar.classList.remove("show");
-  menuBtn.classList.remove("hide");
-}
-window.onscroll = ()=>{
-  this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
-}
+  //jquery for toggle dropdown menus
+  $(document).ready(function(){
+        //toggle sub-menus
+        $(".sub-btn").click(function(){
+          $(this).next(".sub-menu").slideToggle();
+        });
+
+        //toggle more-menus
+        $(".more-btn").click(function(){
+          $(this).next(".more-menu").slideToggle();
+        });
+      });
+
+      //javascript for the responsive navigation menu
+      var menu = document.querySelector(".menu");
+      var menuBtn = document.querySelector(".menu-btn");
+      var closeBtn = document.querySelector(".close-btn");
+
+      menuBtn.addEventListener("click", () => {
+        menu.classList.add("active");
+      });
+
+      closeBtn.addEventListener("click", () => {
+        menu.classList.remove("active");
+      });
+
+      //javascript for the navigation bar effects on scroll
+      window.addEventListener("scroll", function(){
+        var header = document.querySelector("header");
+        header.classList.toggle("sticky", window.scrollY > 0);
+      });
 </script>
 </html>
