--- a/public/PrayerRequest.html
+++ b/public/PrayerRequest.html
@@ -19,7 +19,7 @@
           <div class="close-btn"></div>
           <li class="menu-item"><a href="index.html">Home</a></li>
           <li class="menu-item">
-            <a class="sub-btn" href="index.html#connects">Connects +</i></a>
+            <a class="sub-btn" href="#">Connects +</i></a>
             <ul class="sub-menu">
               <li class="sub-item"><a href="Sundayservice.html">Sunday Service</a></li>
               <li class="sub-item"><a href="Wildfire.html">Wildfire</a></li>
@@ -29,7 +29,7 @@
             </ul>
           </li>
           <li class="menu-item">
-            <a class="sub-btn" href="index.html#equipping">Equipping +</i></a>
+            <a class="sub-btn" href="#">Equipping +</i></a>
             <ul class="sub-menu">
               <li class="sub-item"><a href="Mentoring.html">Mentoring</a></li>
               <li class="sub-item"><a href="SOL.html">SOL CLass</a></li>
