--- a/public/J12Kids.html
+++ b/public/J12Kids.html
@@ -22,11 +22,11 @@
             <li class="menu-item">
               <a class="sub-btn" href="#">Connects +</a>
               <ul class="sub-menu">
-                <li class="sub-item"><a href="Sundayservice.html">Sunday Service</a></li>
-                <li class="sub-item"><a href="Wildfire.html">Wildfire</a></li>
-                <li class="sub-item"><a href="J12Kids.html">J12 Kids</a></li>
-                <li class="sub-item"><a href="Spearhead.html">Spearhead</a></li>
-                <li class="sub-item"><a href="Married4Life.html">Married For Life</a></li>
+                <li class="sub-item"><a href="Sundayservice.html?Prompt=sundaySchool">Sunday Service</a></li>
+                <li class="sub-item"><a href="Wildfire.html?Prompt=wildFire">Wildfire</a></li>
+                <li class="sub-item"><a href="J12Kids.html?Prompt=j12kids">J12 Kids</a></li>
+                <li class="sub-item"><a href="Spearhead.html?Prompt=spearHead">Spearhead</a></li>
+                <li class="sub-item"><a href="Married4Life.html?Prompt=married4life">Married For Life</a></li>
               </ul>
             </li>
             <li class="menu-item">
@@ -39,7 +39,7 @@
             </li>
             <li class="menu-item"><a href="Media.html">Media</a></li>
             <li class="menu-item"><a href="index.html#prayerRequest">Prayer Request</a></li>
-            <li class="menu-item"><a href="Announcement.html">Announcements</a></li>
+            <li class="menu-item"><a href="Announcement.html?Prompt=announcement">Announcements</a></li>
           </ul>
         </div>
         <div class="menu-btn"></div>
@@ -260,12 +260,7 @@
           </div>
         </div>
 </section>
-<section id="subscribe">
-  <!--
-    it should appear here
-  -->
-   
-</section>
+
     <div class="bottomLinks">
 
        <!--
