--- a/public/Sundayservice.html
+++ b/public/Sundayservice.html
@@ -22,11 +22,11 @@
         <li class="menu-item">
           <a class="sub-btn" href="#">Connects +</a>
           <ul class="sub-menu">
-            <li class="sub-item"><a href="Sundayservice.html">Sunday Service</a></li>
-            <li class="sub-item"><a href="Wildfire.html">Wildfire</a></li>
-            <li class="sub-item"><a href="J12Kids.html">J12 Kids</a></li>
-            <li class="sub-item"><a href="Spearhead.html">Spearhead</a></li>
-            <li class="sub-item"><a href="Married4Life.html">Married For Life</a></li>
+            <li class="sub-item"><a href="Sundayservice.html?Prompt=sundaySchool">Sunday Service</a></li>
+            <li class="sub-item"><a href="Wildfire.html?Prompt=wildFire">Wildfire</a></li>
+            <li class="sub-item"><a href="J12Kids.html?Prompt=j12kids">J12 Kids</a></li>
+            <li class="sub-item"><a href="Spearhead.html?Prompt=spearHead">Spearhead</a></li>
+            <li class="sub-item"><a href="Married4Life.html?Prompt=married4life">Married For Life</a></li>
           </ul>
         </li>
         <li class="menu-item">
@@ -39,7 +39,7 @@
         </li>
         <li class="menu-item"><a href="Media.html">Media</a></li>
         <li class="menu-item"><a href="index.html#prayerRequest">Prayer Request</a></li>
-        <li class="menu-item"><a href="Announcement.html">Announcements</a></li>
+        <li class="menu-item"><a href="Announcement.html?Prompt=announcement">Announcements</a></li>
       </ul>
     </div>
     <div class="menu-btn"></div>
@@ -151,7 +151,7 @@
     <div class="announcement">
       <h1>Announcement</h1>
       <p>Here you will find information about upcoming events, activities, and other news from our church community. We update this page regularly, so be sure to check back often for the latest updates.</p>
-      <a href="Announcement.html"><button class="button"><span><h1>Be updated </h1></span></button></a>
+      <a href="Announcement.html?Prompt=announcement"><button class="button"><span><h1>Be updated </h1></span></button></a>
     </div>
 
   </div>
